Blog Page Edited

--- a/mainwebsite/templates/mainwebsite/blog-posts.html
+++ b/mainwebsite/templates/mainwebsite/blog-posts.html
@@ -4,7 +4,7 @@
 <div class="corzo-page-wrapper" id="corzo-page-wrapper">
     <div class="gdlr-core-page-builder-body">
         
-        {% for blog in blogs %}
+        {% for post in posts %}
         <div class="gdlr-core-pbf-wrapper" style="padding: 370px 0px 160px 0px;" data-skin="white" id="gdlr-core-wrapper-1">
             <div class="gdlr-core-pbf-background-wrap" style="background-color: #383838;">
                 <div
