--- a/mainwebsite/templates/mainwebsite/blog-posts.html
+++ b/mainwebsite/templates/mainwebsite/blog-posts.html
@@ -9,7 +9,7 @@
             <div class="gdlr-core-pbf-background-wrap" style="background-color: #383838;">
                 <div
                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                    style="opacity: 0.4; background-image: url({{blog.image.url}}); background-size: cover; background-position: center;"
+                    style="opacity: 0.4; background-image: url({{post.image.url}}); background-size: cover; background-position: center;"
                     data-parallax-speed="0.3"
                 ></div>
             </div>
@@ -19,7 +19,7 @@
                         <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                             <div class="gdlr-core-title-item-title-wrap">
                                 <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 75px; font-weight: 600; letter-spacing: 0px; text-transform: none; color: #ffffff;">
-                                    {{blog.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                    {{post.siteTitle}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                 </h3>
                             </div>
                             <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 25px; font-style: normal; color: #ffffff; margin-top: 15px;">{{contact.titleTag}}</span>
