--- a/mainwebsite/templates/mainwebsite/base/base.html
+++ b/mainwebsite/templates/mainwebsite/base/base.html
@@ -310,6 +310,8 @@
         <script type="text/javascript" src="{% static 'mainwebsite/js/plugins/jquery.mmenu.js'%}"></script>
         <script type="text/javascript" src="{% static 'mainwebsite/js/plugins/jquery.superfish.js'%}"></script>
         <script type="text/javascript" src="{% static 'mainwebsite/js/plugins/script-core.js'%}"></script>
+        <script type='text/javascript' src="{% static 'mainwebsite/js/plugins/isotope.js' %}"></script>
+
 
 
 
