--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -460,7 +460,7 @@
                                                     <div class="gdlr-core-portfolio-grid3 gdlr-core-outer-frame-element">
                                                         <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image gdlr-core-style-margin-title">
                                                             <div class="gdlr-core-portfolio-thumbnail-image-wrap">
-                                                                <a href="artificial-intelligence.html">
+                                                                <a class="gdlr-core-lightgallery gdlr-core-js" href={{gallery.image.url}} data-lightbox-group="gdlr-core-img-group-1" >
                                                                     <img src={{gallery.image.url}} alt="" width="600" height="600" title="iStock-1132126199" />
                                                                     <span class="gdlr-core-image-overlay gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin">
                                                                         <span class="gdlr-core-image-overlay-content">
