--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -485,7 +485,7 @@
                                                             "
                                                         >
                                                             <h3 class="gdlr-core-portfolio-title gdlr-core-skin-title" style="font-weight: 700; text-transform: none;">
-                                                                <a href="artificial-intelligence.html">{{gallery.title}}</a>
+                                                                <a href={{gallery.image.url}}>{{gallery.title}}</a>
                                                             </h3>
                                                         </div>
                                                     </div>
