--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -630,8 +630,7 @@
                                                         <div class="gdlr-core-blog-grid-frame gdlr-core-sync-height-space-position clearfix" style="padding-right: 30px; padding-bottom: 40px;">
                                                             <div class="gdlr-core-blog-grid-top-info clearfix">
                                                                 <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-category">
-                                                                    <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="#" rel="tag">Blog</a><span class="gdlr-core-sep">,</span>
-                                                                    <a href="#" rel="tag">M&amp;A</a>
+                                                                    <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="#" rel="tag">{{blog.category}}</a><span class="gdlr-core-sep">,</span>
                                                                 </span>
                                                                 <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date">
                                                                     <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{blog.created}}</a>
