--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -641,7 +641,7 @@
                                                             </h3>
                                                             <div class="gdlr-core-blog-content clearfix"></div>
                                                             <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author">
-                                                                <span class="gdlr-core-head">By</span><a href="#" title="Posts by John Smith" rel="author">{{blog.author}}</a>
+                                                                <span class="gdlr-core-head">By</span><a href="#0" title="Posts by John Smith" rel="author">{{blog.author}}</a>
                                                             </span>
                                                         </div>
                                                     </div>
