--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -633,7 +633,7 @@
                                                                     <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="#0" rel="tag">{{blog.category}}</a>
                                                                 </span>
                                                                 <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date">
-                                                                    <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{blog.created}}</a>
+                                                                    <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#0">{{blog.created}}</a>
                                                                 </span>
                                                             </div>
                                                             <h3 class="gdlr-core-blog-title gdlr-core-skin-title" style="font-size: 22px; font-weight: 500; letter-spacing: 0px;">
