--- a/mainwebsite/templates/mainwebsite/base/base.html
+++ b/mainwebsite/templates/mainwebsite/base/base.html
@@ -66,7 +66,9 @@
                                     >
                                         <a href="{% url 'home' %}" aria-current="page">Home</a>
                                     </li>
-                                    <li class="menu-item menu-item-has-children">
+                                    <li
+                                        class="menu-item menu-item-home current-menu-item page_item page-item-12613 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children"
+                                    >
                                         <a href="{% url 'services' %}" aria-current="page"> Services</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
@@ -150,7 +152,9 @@
                                             >
                                                 <a href="{% url 'home' %}" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
                                             </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                            <li
+                                                class="menu-item menu-item-home current-menu-item page_item page-item-12613 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children corzo-normal-menu"
+                                            >
                                                 <a href="{% url 'services' %}" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Services</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
