--- a/mainwebsite/templates/mainwebsite/base/base.html
+++ b/mainwebsite/templates/mainwebsite/base/base.html
@@ -2,6 +2,17 @@
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
     <head>
+        {% if GA_KEY %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ GA_KEY }}"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '{{ GA_KEY }}');
+        </script>
+        {% endif %}
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
