--- a/mainwebsite/templates/dashboard/body_page_include/Sidebar.html
+++ b/mainwebsite/templates/dashboard/body_page_include/Sidebar.html
@@ -21,6 +21,12 @@
         ></a>
     </li>
     <li class="slide">
+      <a class="side-menu__item" href="{% url 'analytics' %}"
+        ><i class="side-menu__icon fa fa-bar-chart"></i
+        ><span class="side-menu__label">Google</span
+        ></a>
+    </li>
+    <li class="slide">
       <a class="side-menu__item" data-toggle="slide" href="#"
         ><i class="side-menu__icon fa fa-sliders"></i
         ><span class="side-menu__label">Sliders</span
