--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -78,7 +78,7 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
-                                            <div class="col-md-8 card mb-4  mt-3 ">
+                                            <div class="col-md-12 card mb-4  mt-3 ">
                                               <div class="card-body">
                                                 {% if new_comment %}
                                                 <div class="alert alert-success" role="alert">
@@ -89,7 +89,7 @@
                                                 <form method="post" style="margin-top: 1.3em;">
                                                   {{ comment_form.as_p }}
                                                   {% csrf_token %}
-                                                  <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
+                                                  <button type="submit" class="btn btn-danger  btn-lg">Submit</button>
                                                 </form>
                                                 {% endif %}
                                               </div>
