--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -87,7 +87,7 @@
                                                 {% else %}
                                                 <h5>Leave a comment</h5>
                                                 <form method="post" style="margin-top: 1.3em;">
-                                                  {{ comment_form.as_p }}
+                                                  {{ form.as_p }}
                                                   {% csrf_token %}
                                                   <button type="submit" class="btn btn-danger  btn-lg">Submit</button>
                                                 </form>
