--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -89,6 +89,10 @@
                                                 <form method="post" style="margin-top: 1.3em;">
                                                   {{ form.as_p }}
                                                   {% csrf_token %}
+                                                  <div class="form-group">
+                                                    <label class="form-label">Name</label>
+                                                    {% render_field form.name class="form-control" placeholder="Your Name" %}
+                                                  </div>
                                                   <button type="submit" class="btn btn-danger  btn-lg">Submit</button>
                                                 </form>
                                                 {% endif %}
