--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -85,7 +85,7 @@
                                                 <div class="alert alert-success" role="alert">
                                                   Your comment is awaiting moderation
                                                 </div>
-                                                {% endif %}
+                                                {% else %}
                                                 <h5>Leave a comment</h5>
                                                 <form method="post" style="margin-top: 1.3em;">
                                                   {{ form.as_p }}
@@ -96,6 +96,7 @@
                                                   </div>
                                                   <button type="submit" class="btn btn-danger  btn-lg">Submit</button>
                                                 </form>
+                                                {% endif %}
                                               </div>
                                             </div>
                                           </div>
