--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -94,6 +94,14 @@
                                                     <label class="form-label">Name</label>
                                                     {% render_field form.name class="form-control" placeholder="Your Name" %}
                                                   </div>
+                                                  <div class="form-group">
+                                                    <label class="form-label">Email</label>
+                                                    {% render_field form.email class="form-control" placeholder="Your Email" %}
+                                                  </div>
+                                                  <div class="form-group">
+                                                    <label class="form-label">Comment</label>
+                                                    {% render_field form.body class="form-control" placeholder="Your Comment" %}
+                                                  </div>
                                                   <button type="submit" class="btn btn-danger  btn-lg">Submit</button>
                                                 </form>
                                                 {% endif %}
