--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -87,7 +87,7 @@
                                                 </div>
                                                 {% else %}
                                                 <h5>Leave a comment</h5>
-                                                <form method="post" style="margin-top: 1.3em;">{% csrf_token %}
+                                                <form method="post" action = "{% url 'blog_details' %}" style="margin-top: 1.3em;">{% csrf_token %}
                                                   <div class="form-group">
                                                     <label class="form-label">Name</label>
                                                     {% render_field form.name class="form-control" placeholder="Your Name" %}
