--- a/mainwebsite/templates/dashboard/create-comment.html
+++ b/mainwebsite/templates/dashboard/create-comment.html
@@ -8,28 +8,65 @@
 
 						<!-- Page-Header-->
 						<div class="page-header">
-							<h1 class="page-title">Create Testimonial</h1>
+							<h1 class="page-title">Create Comment</h1>
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
-								<li class="breadcrumb-item active" aria-current="page">create-testimonial</li>
+								<li class="breadcrumb-item active" aria-current="page">create-comment</li>
 							</ol>
 						</div>
 						<!-- /Page-Header-->
 						
-						<div class="row">
-							<div class="col-md-12 col-xl-4">
+						<div class="row row-deck">
+							<div class="col-lg-6">
 								<div class="card">
 									<div class="card-header">
-										<h3 class="card-title">Comment</h3>
-										<div class="card-options">
-											<label class="custom-switch m-0">
-												<input type="checkbox" value="1" class="custom-switch-input" checked>
-												<span class="custom-switch-indicator"></span>
-											</label>
-										</div>
+										<div class="card-title">Create Comment</div>
 									</div>
 									<div class="card-body">
-										Duis aute irure dolor in reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+										<div class="form-group">
+											<label class="form-label">name</label>
+											{% render_field form.name class="form-control" placeholder="Your Name" %}
+										</div>
+										<div class="form-group">
+											<label class="form-label">Email</label>
+											{% render_field form.email class="form-control" placeholder="Your Email" %}
+										</div>
+										<div class="form-group">
+											<label class="form-label">Body</label>
+											{% render_field form.body class="form-control" placeholder="Write your comment here" %}
+										</div>
+										<div class="form-group">
+											<label class="form-label">Active</label>
+											{% render_field form.active class="form-control" placeholder="Active or off" %}
+										</div>
+										<div class="form-footer">
+											<button type="submit" class="btn btn-primary btn-block">Post Comment</button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="card">
+									<div class="card-body">
+										<div class="text-center text-muted">
+											Don't have account yet? <a href="register.html">Sign up</a>
+										</div>
+										<form class="" method="post">
+											<div class="mt-4">
+												<div class="card-title">Forgot password</div>
+												<p class="text-muted">Enter your email address and your password will be reset and emailed to you.</p>
+												<div class="form-group">
+													<label class="form-label" for="exampleInputEmail1">Email address</label>
+													<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+												</div>
+												<div class="form-footer">
+													<button type="submit" class="btn btn-primary btn-block">Send me new password</button>
+												</div>
+											</div>
+										</form>
+										<div class="text-center text-muted mt-3 ">
+											Forget it, <a href="login.html">send me back</a> to the sign in screen.
+										</div>
 									</div>
 								</div>
 							</div>
