--- a/mainwebsite/templates/dashboard/create-comment.html
+++ b/mainwebsite/templates/dashboard/create-comment.html
@@ -17,12 +17,13 @@
 						<!-- /Page-Header-->
 						
 						<div class="row row-deck">
-							<div class="col-lg-6">
+							<div class="col-lg-12">
 								<div class="card">
 									<div class="card-header">
 										<div class="card-title">Create Comment</div>
 									</div>
 									<div class="card-body">
+										<form method='POST' enctype='multipart/form-data' novalidate>{% csrf_token %}
 										<div class="form-group">
 											<label class="form-label">name</label>
 											{% render_field form.name class="form-control" placeholder="Your Name" %}
@@ -42,34 +43,11 @@
 										<div class="form-footer">
 											<button type="submit" class="btn btn-primary btn-block">Post Comment</button>
 										</div>
+									</form>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6">
-								<div class="card">
-									<div class="card-body">
-										<div class="text-center text-muted">
-											Don't have account yet? <a href="register.html">Sign up</a>
-										</div>
-										<form class="" method="post">
-											<div class="mt-4">
-												<div class="card-title">Forgot password</div>
-												<p class="text-muted">Enter your email address and your password will be reset and emailed to you.</p>
-												<div class="form-group">
-													<label class="form-label" for="exampleInputEmail1">Email address</label>
-													<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-												</div>
-												<div class="form-footer">
-													<button type="submit" class="btn btn-primary btn-block">Send me new password</button>
-												</div>
-											</div>
-										</form>
-										<div class="text-center text-muted mt-3 ">
-											Forget it, <a href="login.html">send me back</a> to the sign in screen.
-										</div>
-									</div>
-								</div>
-							</div>
+
 						</div>
 					</div>
 				</div>
