--- a/mainwebsite/templates/dashboard/delete-comment.html
+++ b/mainwebsite/templates/dashboard/delete-comment.html
@@ -6,74 +6,44 @@
 
         <!-- Page-Header-->
         <div class="page-header">
-            <h1 class="page-title">Testimonials</h1>
+            <h1 class="page-title">Comments</h1>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">testimonials</li>
+                <li class="breadcrumb-item active" aria-current="page">comments</li>
             </ol>
         </div>
         <!-- /Page-Header-->
         <form method='post'>{% csrf_token %}
-            <p>Are you sure you want to delete "{{notes.testimonialTitle}}"</p>
+            <p>Are you sure you want to delete "{{comment.name}}"</p>
             <p>This action cannot be undone</p>
             <input type="submit" class="btn btn-warning" value="Confirm" />
-            <a href="{% url 'view_testimonials' %}"  class="btn btn-danger">Cancel</a>
+            <a href="{% url 'view_comments' %}"  class="btn btn-danger">Cancel</a>
         </form>
 
         <div class="row">
-            {% for testimonial in testimonials %}
-            <div class="col-lg-3">
-                <div class="card card-profile cover-image "  data-image-src="{% static "dashboard/images/photos/gradient3.jpg"%}">
-                    <div class="card-body text-center">
-                        <img class="card-profile-img" src={{testimonial.image.url}} alt="img">
-                        <h3 class="mb-1 text-white">{{testimonial.name}}</h3>
-                        <p class="mb-2 text-white">{{testimonial.companyName}}</p>
-                        <a class="btn btn-primary text-white btn-sm mt-2">
-                            <span class="fa fa-trash"></span> Delete
-                        </a>
-                        <a href="{% url 'update_testimonials' pk=testimonial.id%} " class="btn btn-success btn-sm mt-2"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Testimony</a>
+            {% for comment in comments %}
+            <div class="col-md-12 col-xl-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">{{ comment.name }}</h3>
+                        <div class="card-options">
+                            <label class="custom-switch m-0">
+                                <input type="checkbox" value="{{ comment.active }}" class="custom-switch-input" checked>
+                                <span class="custom-switch-indicator"></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        {{ comment.body }}
+                        <small class="text-muted">
+                            <cite title="Source Title">- {{ comment.created_on }}</cite>
+                        </small>
+                    </div>
+                    <div class="ml-auto text-muted">
+                        <a href="{% url 'delete_comment' pk=comment.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-trash"></i></a>
+                        <a href="{% url 'update_comment' pk=comment.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-pencil"></i></a>
                     </div>
                 </div>
-                {% comment %} <div class="card p-5 ">
-                    <div class="card-title">
-                        Contact &amp; Personal Info
-                    </div>
-                    <div class="media-list">
-                        <div class="media mt-1 pb-2">
-                            <div class="mediaicon">
-                                <i class="fa fa-link" aria-hidden="true"></i>
-                            </div>
-                            <div class="card-body ml-5 p-1">
-                                <h6 class="mediafont text-dark">Websites</h6><a class="d-block" href="">http://Reallist.com</a> <a class="d-block" href="">http://Reallist.net</a>
-                            </div>
-                            <!-- media-body -->
-                        </div>
-                        <!-- media -->
-
-                        <!-- media -->
-                        <div class="media mt-1 pb-2">
-                            <div class="mediaicon">
-                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="card-body p-1 ml-5">
-                                <h6 class="mediafont text-dark">Email </h6><span class="d-block">rubin@info.com</span>
-                            </div>
-                            <!-- media-body -->
-                        </div>
-                        <!-- media -->
-                        <div class="media mt-1">
-                            <div class="mediaicon">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </div>
-                            <div class="card-body p-1 ml-5">
-                                <h6 class="mediafont text-dark">Twitter</h6><a class="d-block" href="#">@Reallist</a>
-                            </div>
-                            <!-- media-body -->
-                        </div>
-                        <!-- media -->
-                    </div>
-                    <!-- media-list -->
-                </div> {% endcomment %}
             </div>
             {% endfor %}
         </div>
