--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -89,8 +89,8 @@
                                                 <h5>Leave a comment</h5>
                                                 <form method="post" style="margin-top: 1.3em;" >{% csrf_token %}
                                                     <div class="form-group">
-                                                        <label class="form-label">Name</label>
-                                                        {% render_field form.name class="form-control" placeholder="Your Name" %}
+                                                        <label class="form-label">Post</label>
+                                                        {% render_field form.post class="form-control" placeholder="Your Name" %}
                                                       </div>
                                                     <div class="form-group">
                                                     <label class="form-label">Name</label>
