--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -94,7 +94,7 @@
                                                       </div>
                                                     <div class="form-group">
                                                     <label class="form-label">Name</label>
-                                                    {% render_field form.{{forms.name}} class="form-control" placeholder="Your Name" %}
+                                                    {% render_field form.name class="form-control" placeholder="Your Name" %}
                                                   </div>
                                                   <div class="form-group">
                                                     <label class="form-label">Email</label>
