--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -94,9 +94,9 @@
                                                 {% endif %}
                                               </div>
                                             </div>
-                                            
+
                                         <!--Endcomment-->
-                                    
+                                      </div>
                                 </div>
                             </div>
                         </div>
