--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -80,7 +80,7 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
-                                            <div class="card-body">
+                                            <div class="card-body mb-4  mt-3">
                                               <div class="form-group">
                                                 <label class="form-label">Blog Title</label>
                                                 {% render_field form.title class="form-control" placeholder="Blog Title" %}
@@ -144,6 +144,7 @@
                                             </div>
                                             
                                             <div class="col-md-12 card mb-4  mt-3 ">
+
                                               <div class="card-body">
                                                 {% if new_comment %}
                                                 <div class="alert alert-success" role="alert">
@@ -171,6 +172,8 @@
                                                 </form>
                                                 {% endif %}
                                               </div>
+                                            
+                                            
                                             </div>
 
                                         <!--Endcomment-->
