--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -80,7 +80,7 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
-                                            <div class="card-body mb-4  mt-3">
+                                            <div class="card-body card">
                                               <div class="form-group">
                                                 <label class="form-label">Blog Title</label>
                                                 {% render_field form.title class="form-control" placeholder="Blog Title" %}
